--- a/index.html
+++ b/index.html
@@ -9,47 +9,24 @@
 </head>
 
 <body>
-  <div class="tab-container">
+
+<!--   <div class="tab-container">
     <div class="shade-container">
       <div class="shade">
       </div>
-      <div class="shade-handle">
+      <div class="shade-handle pos_1">
       </div>
     </div>
-    <div data-tab-content-id="1" class="page page_1 tab-content">
-      Content for Tab1
-    </div>
-    <div class="tab">
-    </div>
+  </div> -->
 
-    <div data-tab-content-id="2" class="page page_2 tab-content">
-      Content for Tab2
-    </div>
+  <div class="shade page_1"></div>
+  <div class="shade page_2"></div>
+  <div class="shade-handle pos_1"></div>
+  <div class="shade-handle pos_2"></div>
 
-    <div data-tab-content-id="3" class="page page_3 tab-content">
-      Content for Tab3
-    </div>
-
-    <div data-tab-content-id="4" class="page page_4 tab-content">
-      Content for Tab3
-    </div>
-
-    <div data-tab-content-id="5" class="page page_5 tab-content">
-      Content for Tab3
-    </div>
-  </div>
-
-  <ul data-tabs>
-    <li><a data-tab-id="1" id="tab_1" class="tab" href="#"></a></li>
-    <li><a data-tab-id="2" id="tab_2" class="tab" href="#"></a></li>
-    <li><a data-tab-id="3" id="tab_3" class="tab" href="#"></a></li>
-    <li><a data-tab-id="4" id="tab_4" class="tab" href="#"></a></li>
-    <li><a data-tab-id="5" id="tab_5" class="tab" href="#"></a></li>
-  </ul>
-
-  <script src="js/libs/jquery-1.10.2.js"></script>
+  <script src="http://code.jquery.com/jquery-latest.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
   <script src="js/app.js"></script>
 </body>
 
 </html>
-
