--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Tabtastic</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/normalize.css">
+  <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 </head>
 
 <body>
@@ -19,10 +20,47 @@
     </div>
   </div> -->
 
-  <div class="shade page_1"></div>
-  <div class="shade page_2"></div>
-  <div class="shade-handle pos_1"></div>
-  <div class="shade-handle pos_2"></div>
+  <div class="shade page_1">
+    <div class="shade-content">
+      <h1>Lorem Ipsum</h1>
+      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+    </div>
+  </div>
+  <div class="shade page_2">
+    <div class="shade-content">
+
+    </div>
+  </div>
+  <div class="shade page_3">
+    <div class="shade-content">
+
+    </div>
+  </div>
+  <div class="shade page_4">
+    <div class="shade-content">
+
+    </div>
+  </div>
+  <div class="shade page_5">
+    <div class="shade-content">
+
+    </div>
+  </div>
+  <div class="shade-handle pos_1">
+    <div class="handle-icon"><i class="fa fa-home fa-4x"></i></div>
+  </div>
+  <div class="shade-handle pos_2">
+    <div class="handle-text"><div class="circle"></div></div>
+  </div>
+  <div class="shade-handle pos_3">
+    <div class="handle-text">A</div>
+  </div>
+  <div class="shade-handle pos_4">
+    <div class="handle-text">About</div>
+  </div>
+  <div class="shade-handle pos_5">
+    <div class="handle-text"></div>
+  </div>
 
   <script src="http://code.jquery.com/jquery-latest.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
