--- a/index.html
+++ b/index.html
@@ -11,15 +11,6 @@
 
 <body>
 
-<!--   <div class="tab-container">
-    <div class="shade-container">
-      <div class="shade">
-      </div>
-      <div class="shade-handle pos_1">
-      </div>
-    </div>
-  </div> -->
-
   <div class="shade page_1">
     <div class="shade-content">
       <h1>Lorem Ipsum</h1>
@@ -60,6 +51,10 @@
   </div>
   <div class="shade-handle pos_5">
     <div class="handle-text"></div>
+  </div>
+
+  <div class="main">
+    <p class="main">Tabtastic - Responsive tabbed navigation<p>
   </div>
 
   <script src="http://code.jquery.com/jquery-latest.js"></script>
