--- a/index.html
+++ b/index.html
@@ -54,7 +54,15 @@
   </div>
 
   <div class="main">
-    <p class="main">Tabtastic - Responsive tabbed navigation<p>
+    <p class="main">Tabtastic - Responsive tabbed navigation
+    <div class="button">
+      <iframe src="http://ghbtns.com/github-btn.html?user=alnoorp&repo=tabtastic&type=fork&count=true&size=large"
+  allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
+      <iframe src="http://ghbtns.com/github-btn.html?user=alnoorp&repo=tabtastic&type=watch&count=true&size=large"
+    allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
+    </div>
+    <p>
+
   </div>
 
   <script src="http://code.jquery.com/jquery-latest.js"></script>
