--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
   <div class="main">
     <p class="main">Tabtastic - Responsive tabbed navigation
     <div class="button">
-      <iframe src="http://ghbtns.com/github-btn.html?user=alnoorp&repo=tabtastic&type=fork&count=true&size=large"
+      <iframe src="http://ghbtns.com/github-btn.html?user=alnoorp&repo=tabtastic&type=fork&size=large"
   allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
-      <iframe src="http://ghbtns.com/github-btn.html?user=alnoorp&repo=tabtastic&type=watch&count=true&size=large"
+      <iframe src="http://ghbtns.com/github-btn.html?user=alnoorp&repo=tabtastic&type=watch&size=large"
     allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
     </div>
     <p>
